# colreg

./: .gitignore  AGENTS.md  GEMINI.md  README.md  Untitled.ipynb  __init__.py  amqtt.yaml  binary_classifier.py  boat_detector.py  commit_list.txt  config.py  datasets.md  day_shapes.py  demo.py  example_usage.py  infrared_detector.py  lights.py  mqtt_node.py  mqtt_simulate.py  pipeline.py  pyproject.toml  refactor_imports.py  requirements.txt  test_day_images.py  test_image.py  test_night_images.py  test_strip_input.py
colreg/: README.md
docs/superpowers/plans/: 2026-05-06-code-stripping.md  2026-05-06-repo-cleanup.md
docs/superpowers/specs/: 2025-05-15-strip-comments-design.md  2026-05-06-code-stripping-design.md  2026-05-06-repo-cleanup-design.md
scripts/: mqtt_node.py  mqtt_simulate.py
src/colreg_vision/: __init__.py  pipeline.py
src/colreg_vision.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/colreg_vision/classifiers/: binary.py  day_shapes.py  lights.py
tests/: test_pipeline.py  test_strip_logic.py
tests/integration/: test_day_images.py  test_night_images.py
tools/: debug_perf.py  strip_comments.py
video-analytics/: README.md  __init__.py  binary_classifier.py  boat_detector.py  config.py  day_shapes.py  demo.py  description.md  example_usage.py  infrared_detector.py  lights.py  pipeline.py  test_image.py
video-analytics/binary-classifier/: how-to-use.py
video-analytics/cropper/: how-to-use.py
video-analytics/day-shapes/: how-to-use.py
video-analytics/infrared/: how-to-use.py
video-analytics/lights/: how-to-use.py
(+4 files in other folders)
