[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colreg-vision"
version = "0.1.0"
description = "COLREG Video Analytics Pipeline - Maritime vessel classification"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]